2005-08-16 Hasso Tepper <hasso at quagga.net>

	* isis_misc.[ch]: Fix some warnings, making some strings const.

2005-08-10 Hasso Tepper <hasso at quagga.net>

	* topology/spgrid.c: MAXLONG is deprecated, use LONG_MAX instead.
	  values.h, where MAXLONG is defined, is deprecated as well.

2005-05-26 Yossi Boaron <Yossi.Boaron@veraznetworks.com>

	* isis_dr.c: Fix copy&paste error in isis_dr_resign().

2005-05-25 Paul Jakma <paul@dishone.st>

	* isisd.c: (show_isis_generated_topology) change to _RO version
	  of list macro. remove the extra listnode variable. one of the
	  macros had had incorrect number of arguments.

2005-05-03 Paul Jakma <paul@dishone.st>

	* (general) More cleaning up of stream abuse, isisd should be
	  back to previous functionality. Replace various XMALLOC+memset's
	  with XCALLOC
	* isis_tlv.c: (tlv_add_padding) use stream_put to clear the stream
	  rather than forward endp, as isisd reuses streams.
	* isis_pdu.c: (process_lsp) cleanup direct reference to stream endp
	  (send_lsp) manual copy of a stream cleaned up to use stream_copy.
	* isis_network.c: (isis_recv_pdu_bcast) replace direct memcpy with
	  stream_write
	  (isis_recv_pdu_p2p) replace recvfrom directly into stream with
	  stream_recvfrom. Remove dangerous and now unneeded manual update
	  of endp.
	  (isis_recv_pdu_bcast / non-GNU_LINUX) Replace direct memcpy with
	  stream_write.
	  (isis_recv_pdu_p2p) replace read direct into stream with
	  stream_read_try, and hence remove the manual update of endp.
	* isis_lsp.c: (lsp_update_data) manual stream dup replaced with 
	  stream_dup.
	  (lsppdu_realloc) mempcy into stream data replaced with stream_put.
	  (lsp_build_nonpseudo) remove mysterious stream_forward_endp's -
	  which were originally stream_set_putp - shouldn't be needed
	  now that all the manual fiddling of private stream data has been
	  corrected.
	  (build_topology_lsp_data) remove unneeded twiddling of endp,